--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-certification-2020",
-  "homepage":"https://kleyla.github.io/react-certification-2021",
+  "homepage": "https://kleyla.github.io/react-certification-2021",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -38,8 +38,7 @@
     "husky": "^4.2.5",
     "lint-staged": "^10.2.13",
     "prettier": "^2.1.1",
-    "pretty-quick": "^3.0.0",
-    "react-test-renderer": "^17.0.2"
+    "pretty-quick": "^3.0.0"
   },
   "browserslist": {
     "production": [
