:sparkles: add firebase for login

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 REACT_APP_YOUTUBE_API_KEY=AIzaSyB4emm7HLDp7mMWLbBDJyGnt0YtHcoUHE0
+
+REACT_APP_APIKEY=AIzaSyABVfKm6UztkaZaeQtI4szdNWsZoqj0eKM
+REACT_APP_AUTHDOMAIN=bootcamp-react-wizeline.firebaseapp.com
+REACT_APP_PROJECTID=bootcamp-react-wizeline
+REACT_APP_STORAGEBUCKET=bootcamp-react-wizeline.appspot.com
+REACT_APP_MESSAGINGSENDERID=276847939074
+REACT_APP_APPID=1:276847939074:web:16a57bbcf76ebba1aae11b
