--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 REACT_APP_YOUTUBE_API_KEY=AIzaSyB4emm7HLDp7mMWLbBDJyGnt0YtHcoUHE0
+REACT_APP_YOUTUBE_API_KEY_2=AIzaSyAhHNndvumwuvwgA9mcTqhd9l4wSHrH6F8
 
 REACT_APP_APIKEY=AIzaSyABVfKm6UztkaZaeQtI4szdNWsZoqj0eKM
 REACT_APP_AUTHDOMAIN=bootcamp-react-wizeline.firebaseapp.com
